added flow and task controls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="./js/main1.js"></script>
   <script src="./data/files.js"></script>
+  <script src="./data/instr.js"></script>
 
 </head>
 
