fixed data issue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="./css/main1.css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="./js/main1.js"></script>
+  <script src="./js/helper.js"></script>
   <script src="./data/files.js"></script>
   <script src="./data/instr.js"></script>
 
