data collection finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="./js/main1.js"></script>
   <script src="./js/helper.js"></script>
+  <script src="./js/lib/jquery.mb.browser.min.js"></script>
+  <script src="./js/lib/pgwbrowser.min.js"></script>
+  <script src="./js/lib/moment-with-locales.min.js"></script>
+  <script src="./js/backend/data_collector.js"></script>
   <script src="./data/files.js"></script>
   <script src="./data/instr.js"></script>
 
