--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="./css/main1.css" />
+  <link rel="stylesheet" type="text/css" href="./css/slider.css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="./js/main1.js"></script>
   <script src="./js/helper.js"></script>
