--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="./js/lib/moment-with-locales.min.js"></script>
   <script src="./js/backend/data_collector.js"></script>
   <script src="./js/backend/ajax_pipeline.js"></script>
-  <script src="./data/files.js"></script>
+  <script src="./data/files.min.js"></script>
   <script src="./data/instr.js"></script>
 
 </head>
