--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="./css/main1.css" />
   <link rel="stylesheet" type="text/css" href="./css/slider.css" />
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script type="text/javascript" src="./js/lib/jquery-1.12.2.min.js"></script>
   <script src="./js/main1.js"></script>
   <script src="./js/helper.js"></script>
   <script src="./js/lib/jquery.mb.browser.min.js"></script>
