--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
   <script type="text/javascript" src="./js/lib/jquery-1.12.2.min.js"></script>
   <script src="./js/main1.js"></script>
-  <script src="./js/helper.js"></script>
+  <script src="./js/helper.min.js"></script>
   <script src="./js/lib/jquery.mb.browser.min.js"></script>
   <script src="./js/lib/pgwbrowser.min.js"></script>
   <script src="./js/lib/moment-with-locales.min.js"></script>
-  <script src="./js/backend/data_collector.js"></script>
-  <script src="./js/backend/ajax_pipeline.js"></script>
+  <script src="./js/backend/data_collector.min.js"></script>
+  <script src="./js/backend/ajax_pipeline.min.js"></script>
   <script src="./data/files.min.js"></script>
-  <script src="./data/instr.js"></script>
+  <script src="./data/instr.min.js"></script>
 
 </head>
 
